# task_management

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.hypothesis/examples/200ddc3ab8098d88/: f1bcb830a585d633
.hypothesis/examples/6d9761774e80a52b/: 030c933fdf88dfca  05deb2ef3cd09115  104b6c882df10fc3  12dec35b7335311c  260d14b97050bada  264ca7a9329f2ccc  30c7b738b5a1f9dd  33fc1037010c8b5d  36e571019cc20e71  38e2077039e402c2  43efa69cd1ab25ea  48a45b555fd9bd2a  4d777f96a43dc16b  5407afc2be8b1c8c  54bac8e09d62f2cc  5bca6c175e7bf6fd  64f077a10bc2e290  6998d75984e1a8b8  6de85d035a4b1fb9  833f248197657ea9  97f662d00a5b649e  a61522432344895c  a8662cc99e8c2c62  a89e7e76951294c7  afc3eafbcf0550bd  b0fdcf1196f7c755  c7212c8e6f2ae158  cfb91a8758b541c7  d693a677f4daa3c2  ea0e5aea50a26cd1  eb4f87183126488a  f914e9ae8f4172d8
.hypothesis/examples/7adefe7fb3409a59/: 0e386b6b1a61519c  31f1787935b05662
.hypothesis/examples/d9294f08e87d1456/: 153367f3fcea2c84  201aa68625a5ac04  22cde1f06dff503b  2570b30fdcbe2e6a  26b36eb3fe433c5b  2b6eb5f07dad03d8  2cf6c71ee46173d4  318ab35892752f00  3e58f7b3f91ecba9  43d07bafc016a593  4804cb7713b52eb6  4a04c1b212365fcf  52418b80e89fdf05  5341821f440057d1  53b65ec44b99c9bb  5bfc8bc4110fa2de  670b925239acc466  6ad0f548ec2ee378  6b8d1dcac921867f  71ef35efbe7821a8  947e42e97f4acf0b  973460242d2ba34b  a7ca4094b577ab19  b0774d5a7225e05f  c742205035885a07  (+9 more)
api/: __init__.py
api/core/: config.py
api/db/: database.py  redis.py
api/v1/: celery_tasks.py  errors.py  mail.py  register_middleware.py
migrations/: env.py
migrations/versions/: 016c89890b85_fixed_duedate.py  1fa45c86a626_.py  357a1a120d01_fixed_duedate.py  4d683597b87b_added_foreign_key_to_users.py  572eab849318_added_relationship.py  ae2b0e335603_added_index.py  e75c663dfbed_added_password_field.py
seeds/: seed_tasks.py  seed_users.py
(+14 files in other folders)
