[tool.poetry]
name = "task-management"
version = "0.1.0"
description = ""
authors = ["nadduli <naddulidaniel94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.32.3"
pyjwt = "^2.9.0"
pycodestyle = "^2.12.1"
fastapi = "^0.115.4"
sqlmodel = "^0.0.22"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
