[tool.poetry]
name = "task-management"
version = "0.1.0"
description = ""
authors = ["nadduli <naddulidaniel94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
requests = "^2.32.3"
pyjwt = "^2.9.0"
pycodestyle = "^2.12.1"
fastapi = {extras = ["standard"], version = "^0.115.4"}
sqlmodel = "^0.0.22"
passlib = "^1.7.4"
aioredis = "^2.0.1"
pydantic-settings = "^2.6.1"
asyncpg = "^0.30.0"
autopep8 = "^2.3.1"
click = ">=8.0, <9.0"
black = ">=23.0, <24.0"
fastapi-mail = "^1.4.1"
itsdangerous = "^2.2.0"
celery = "^5.4.0"
redis = "^5.2.0"
asgiref = "^3.8.1"
flower = "^2.0.1"
pytest = "^8.3.3"
schemathesis = "^3.38.6"
slowapi = "^0.1.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
